# threadc

./: CMakeLists.txt  func1.cpp  main.cpp  makefile  mythread.cpp  mythread.h  pro
include/: func1.h
